# Z-Systemizer

./: CHANGELOG.md  README.md  RELEASE_NOTES.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: ci.yml  release.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/dev/zzz/systemizer/: MainActivity.kt  RootCommand.kt  SystemizerClient.kt
cli/: Cargo.toml
cli/src/: main.rs
docs/: CLI.md
module-template/: customize.sh  module.prop  post-fs-data.sh  service.sh
module-template/webroot/: app.js  index.html  style.css
webui/: index.html  package-lock.json  package.json  vite.config.ts
webui/src/: api.ts  main.ts  state.ts  style.scss
