[package]
name = "systemizer"
version = "1.1.4"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Safe Rust executor for KSU Systemizer"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
